@startuml
'https://plantuml.com/class-diagram

interface ITaxCalculator {
    GetTaxRateFor(string zip)
    CalculateTaxesFor(Order order)
}

class TaxJarTaxCalculator {
    GetTaxRateFor(string zip)
    CalculateTaxesFor(Order order)
}

class TaxService {
    GetTaxRateFor(string zip)
    CalculateTaxesFor(Order order)
}

class Address {
    string Street
    string City
    string State
    string Zip
    string Country
}

class Customer {
    string GivenName
    string Surname
}

class Order {
    Customer Customer
    Address ShipTo
    Address ShipFrom
    float Amount
    
}

Order::ShipTo o-- Address : ShipTo
Order::ShipFrom o-- Address : ShipFrom
Order::Customer o-- Customer

TaxService - ITaxCalculator : calculatesTaxesForOrder >
TaxService - ITaxCalculator : calculatesTaxRates >


ITaxCalculator <|-- TaxJarTaxCalculator
ITaxCalculator o-- Order 

TaxService o-- ITaxCalculator

@enduml